[gd_scene load_steps=6 format=3 uid="uid://b5wxn3g7hxvyg"]

[ext_resource type="Script" uid="uid://dbryaenbigvin" path="res://autoload/turret_info_panel.gd" id="1_panel"]
[ext_resource type="StyleBox" uid="uid://bohofwd30p8yv" path="res://waves/Panel.tres" id="2_style"]
[ext_resource type="StyleBox" uid="uid://cc6tsft7xei5m" path="res://autoload/ButtonNormal.tres" id="3_button_normal"]
[ext_resource type="StyleBox" uid="uid://bls0v20ibdnhq" path="res://autoload/ButtonPressed.tres" id="4_button_pressed"]
[ext_resource type="StyleBox" uid="uid://c6elub28iq75d" path="res://autoload/Hover.tres" id="5_button_hover"]

[node name="TurretInfoPanel" type="Panel"]
process_mode = 3
custom_minimum_size = Vector2(300, 0)
offset_right = 300.0
offset_bottom = 450.0
theme_override_styles/panel = ExtResource("2_style")
script = ExtResource("1_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.28627452, 0.69803923, 0.8235294, 0.8627451)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "Place Turret"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="DamageLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Damage: 20"

[node name="RangeLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Range: 200"

[node name="FireRateLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Fire Rate: 1.0/s"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UpgradeButton" type="Button" parent="MarginContainer/VBoxContainer/ActionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.46666667, 0.7372549, 0.9607843, 0.9019608)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("3_button_normal")
theme_override_styles/pressed = ExtResource("4_button_pressed")
theme_override_styles/hover = ExtResource("5_button_hover")
theme_override_styles/disabled = ExtResource("3_button_normal")
text = "Upgrade"

[node name="UpgradeCostLabel" type="Label" parent="MarginContainer/VBoxContainer/ActionContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9758175, 0.761688, 0.9661009, 0.7607843)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "100 coins"
horizontal_alignment = 1

[node name="SellButton" type="Button" parent="MarginContainer/VBoxContainer/ActionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.46666667, 0.7372549, 0.9607843, 0.9019608)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("3_button_normal")
theme_override_styles/pressed = ExtResource("4_button_pressed")
theme_override_styles/hover = ExtResource("5_button_hover")
text = "Sell Turret"

[node name="SellRefundLabel" type="Label" parent="MarginContainer/VBoxContainer/ActionContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.54509807, 0.7647059, 0.2901961, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "Refund: 70 coins"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.46666667, 0.7372549, 0.9607843, 0.9019608)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("3_button_normal")
theme_override_styles/pressed = ExtResource("4_button_pressed")
theme_override_styles/hover = ExtResource("5_button_hover")
text = "Close (ESC)"
